[gd_scene load_steps=16 format=3 uid="uid://byadrotxvbue2"]

[ext_resource type="Texture2D" uid="uid://x50ye5erfsvu" path="res://Assets/MESA.png" id="1_std8q"]
[ext_resource type="Script" uid="uid://iktvw11p384c" path="res://Scripts/GameManager.gd" id="2_w6qxh"]
[ext_resource type="Script" uid="uid://gvvf37bdvkx1" path="res://Scripts/Croupier.gd" id="3_ubgcr"]
[ext_resource type="Script" uid="uid://dephdxcef2x4o" path="res://Scripts/Player.gd" id="4_et4xf"]
[ext_resource type="Script" uid="uid://bt2fbj5iassx3" path="res://Scripts/AI.gd" id="5_626q0"]
[ext_resource type="Script" uid="uid://1ox6fbdtsb42" path="res://Scripts/Labels/Player/PHPLabel.gd" id="6_amdel"]
[ext_resource type="PackedScene" uid="uid://c3qji651xjyo2" path="res://Scenes/DropZone.tscn" id="7_pr2o7"]
[ext_resource type="Script" uid="uid://claeblc1cbfub" path="res://Scripts/Labels/Player/TurnLabel.gd" id="7_vtq4u"]
[ext_resource type="Script" uid="uid://183maronmbmi" path="res://Scripts/Labels/AI/aiSum.gd" id="8_rspgj"]
[ext_resource type="Script" uid="uid://dbq6tb2gtd1lc" path="res://Scripts/Labels/Player/CardsSumLabel.gd" id="8_wmey4"]
[ext_resource type="Script" uid="uid://ddimr2wheyrh4" path="res://Scripts/Labels/AI/aiHP.gd" id="10_ugpjo"]
[ext_resource type="Script" uid="uid://biixoi4puv1vu" path="res://Scripts/Labels/AI/aiTurn.gd" id="11_6ulvv"]
[ext_resource type="Texture2D" uid="uid://cssa3hn7jc1t6" path="res://Assets/maxresdefault-752548946.jpg" id="12_6ulvv"]

[sub_resource type="CircleShape2D" id="CircleShape2D_cwtje"]
radius = 38.2884

[sub_resource type="LabelSettings" id="LabelSettings_amdel"]

[node name="Main" type="Node2D"]

[node name="Mesa" type="Sprite2D" parent="."]
position = Vector2(960, 540)
texture = ExtResource("1_std8q")

[node name="Spawns" type="Area2D" parent="."]

[node name="place1" type="CollisionShape2D" parent="Spawns"]
position = Vector2(385, 202)
shape = SubResource("CircleShape2D_cwtje")

[node name="place2" type="CollisionShape2D" parent="Spawns"]
position = Vector2(672, 202)
shape = SubResource("CircleShape2D_cwtje")

[node name="place3" type="CollisionShape2D" parent="Spawns"]
position = Vector2(958, 202)
shape = SubResource("CircleShape2D_cwtje")

[node name="place4" type="CollisionShape2D" parent="Spawns"]
position = Vector2(1255, 202)
shape = SubResource("CircleShape2D_cwtje")

[node name="place5" type="CollisionShape2D" parent="Spawns"]
position = Vector2(1545, 202)
shape = SubResource("CircleShape2D_cwtje")

[node name="place6" type="CollisionShape2D" parent="Spawns"]
position = Vector2(385, 547)
shape = SubResource("CircleShape2D_cwtje")

[node name="place7" type="CollisionShape2D" parent="Spawns"]
position = Vector2(672, 547)
shape = SubResource("CircleShape2D_cwtje")

[node name="place8" type="CollisionShape2D" parent="Spawns"]
position = Vector2(960, 545)
shape = SubResource("CircleShape2D_cwtje")

[node name="place9" type="CollisionShape2D" parent="Spawns"]
position = Vector2(1249, 547)
shape = SubResource("CircleShape2D_cwtje")

[node name="place10" type="CollisionShape2D" parent="Spawns"]
position = Vector2(1545, 547)
shape = SubResource("CircleShape2D_cwtje")

[node name="place11" type="CollisionShape2D" parent="Spawns"]
position = Vector2(385, 886)
shape = SubResource("CircleShape2D_cwtje")

[node name="place12" type="CollisionShape2D" parent="Spawns"]
position = Vector2(672, 886)
shape = SubResource("CircleShape2D_cwtje")

[node name="place13" type="CollisionShape2D" parent="Spawns"]
position = Vector2(958, 886)
shape = SubResource("CircleShape2D_cwtje")

[node name="place14" type="CollisionShape2D" parent="Spawns"]
position = Vector2(1255, 886)
shape = SubResource("CircleShape2D_cwtje")

[node name="place15" type="CollisionShape2D" parent="Spawns"]
position = Vector2(1545, 886)
shape = SubResource("CircleShape2D_cwtje")

[node name="Revolver" type="Button" parent="."]
offset_left = 28.0
offset_top = 473.0
offset_right = 248.0
offset_bottom = 583.0
text = "Revolver"

[node name="drop_zone" type="Node" parent="."]

[node name="DropZone" parent="drop_zone" instance=ExtResource("7_pr2o7")]
position = Vector2(382, 878)

[node name="DropZone2" parent="drop_zone" instance=ExtResource("7_pr2o7")]
position = Vector2(673, 879)
hand_index = 2

[node name="DropZone3" parent="drop_zone" instance=ExtResource("7_pr2o7")]
position = Vector2(960, 883)
hand_index = 3

[node name="DropZone4" parent="drop_zone" instance=ExtResource("7_pr2o7")]
position = Vector2(1247, 881)
hand_index = 4

[node name="DropZone5" parent="drop_zone" instance=ExtResource("7_pr2o7")]
position = Vector2(1537, 883)
hand_index = 5

[node name="drop_zone_ai" type="Node" parent="."]

[node name="DropZone6" parent="drop_zone_ai" instance=ExtResource("7_pr2o7")]
position = Vector2(384, 204)
hand_index = 6
is_player_zone = false

[node name="DropZone7" parent="drop_zone_ai" instance=ExtResource("7_pr2o7")]
position = Vector2(671, 200)
hand_index = 7
is_player_zone = false

[node name="DropZone8" parent="drop_zone_ai" instance=ExtResource("7_pr2o7")]
position = Vector2(960, 202)
hand_index = 8
is_player_zone = false

[node name="DropZone9" parent="drop_zone_ai" instance=ExtResource("7_pr2o7")]
position = Vector2(1252, 202)
hand_index = 9
is_player_zone = false

[node name="DropZone10" parent="drop_zone_ai" instance=ExtResource("7_pr2o7")]
position = Vector2(1544, 202)
hand_index = 10
is_player_zone = false

[node name="playerLabels" type="Node" parent="."]

[node name="playerHP" type="Label" parent="playerLabels"]
offset_left = 1687.0
offset_top = 748.0
offset_right = 1780.0
offset_bottom = 805.0
text = "PlayerHP"
label_settings = SubResource("LabelSettings_amdel")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("6_amdel")

[node name="playerTurn" type="Label" parent="playerLabels"]
offset_left = 1687.0
offset_top = 908.0
offset_right = 1780.0
offset_bottom = 965.0
text = "PlayerTurn"
label_settings = SubResource("LabelSettings_amdel")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("7_vtq4u")

[node name="playerSum" type="Label" parent="playerLabels"]
offset_left = 1694.0
offset_top = 843.0
offset_right = 1777.0
offset_bottom = 866.0
text = "PlayerSum"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("8_wmey4")

[node name="aiLabels" type="Node" parent="."]

[node name="aiHP" type="Label" parent="aiLabels"]
offset_left = 86.0
offset_top = 78.0
offset_right = 179.0
offset_bottom = 135.0
text = "aiHP"
label_settings = SubResource("LabelSettings_amdel")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("10_ugpjo")

[node name="aiTurn" type="Label" parent="aiLabels"]
offset_left = 86.0
offset_top = 238.0
offset_right = 179.0
offset_bottom = 295.0
text = "aiTurn"
label_settings = SubResource("LabelSettings_amdel")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("11_6ulvv")

[node name="aiSum" type="Label" parent="aiLabels"]
offset_left = 93.0
offset_top = 173.0
offset_right = 176.0
offset_bottom = 196.0
text = "aiSum
"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("8_rspgj")

[node name="PlayerDeath" type="Sprite2D" parent="."]
visible = false
z_index = 10
position = Vector2(960, 544)
scale = Vector2(1.54306, 1.54306)
texture = ExtResource("12_6ulvv")

[node name="GameManager" type="Node" parent="."]
script = ExtResource("2_w6qxh")

[node name="Croupier" type="Node" parent="."]
script = ExtResource("3_ubgcr")

[node name="Player" type="Node" parent="."]
script = ExtResource("4_et4xf")

[node name="AI" type="Node" parent="."]
script = ExtResource("5_626q0")

[connection signal="pressed" from="Revolver" to="Player" method="_on_button_pressed"]
[connection signal="callAI" from="GameManager" to="AI" method="_on_game_manager_call_ai"]
[connection signal="callCroupier" from="GameManager" to="Croupier" method="_on_game_manager_call_croupier"]
[connection signal="callCroupier" from="GameManager" to="Player" method="_on_game_manager_call_croupier"]
[connection signal="callPlayer" from="GameManager" to="Player" method="_on_game_manager_call_player"]
